# lambda-battle

./: CONTRIBUTING.md  Makefile  README.md  lambda-battle.opam
src/Machines/Krivine/: jbuild
src/Representations/DeBruijnIndices/: jbuild
src/Representations/DeBruijnLevels/: Term.mli  jbuild
src/Representations/HOAS/: Term.mli  jbuild
src/Representations/OrderedLinear/: Term.ml  Term.mli  jbuild
src/Representations/Simple/: Term.ml  Term.mli  jbuild
src/Representations/Unique/: jbuild
src/Shared/: Battle.mli  Pretty.ml  Pretty.mli  jbuild
src/lib/: Simple.ml  Simple.mli  jbuild
