opam-version: "2.0"
name: "lambda-battle"
version: "0.0"
synopsis: "An implementation of 1ML targeting the OCaml runtime"
maintainer: "freebroccolo@users.noreply.github.com"
authors: ["Darin Morrison"]
license: "Apache-2.0"
homepage: "https://github.com/freebroccolo/lambda-battle"
bug-reports: "https://github.com/freebroccolo/lambda-battle/issues"
dev-repo: "git+https://github.com/freebroccolo/lambda-battle.git"
depends: [
  "base" {= "v0.10.0"}
  "cmdliner" {= "1.0.2"}
  "fmt" {= "0.8.5"}
  "jbuilder" {build & = "1.0+beta17"}
  "lwt" {= "3.2.1"}
  "menhir" {>= "20171013"}
  "ppx_deriving" {= "4.2.1"}
  "ppx_expect" {= "v0.10.0"}
  "ppx_hash" {= "v0.10.0"}
  "ppx_jane" {= "v0.10.0"}
  "ppx_metaquot" {= "v0.10.0"}
  "ppx_traverse" {= "v0.10.0"}
  "topkg" {= "0.9.1"}
  "uuseg" {= "10.0.0"}
  "uutf" {= "1.0.1"}
]
build: [
  ["make"]
]
